examples/test/testpolicy7706.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7706
  namespace: namespace255
spec:
  podSelector:
    matchLabels:
      key32: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value23
          key22: value34
      podSelector:
        matchLabels:
          key26: value25
          key6: value45
